# sms-ai-assistant

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/core/: config.py  database.py
app/models/: common.py  sms.py
app/providers/: base.py  factory.py  openai_provider.py
app/repositories/: conversation.py  message.py  outbox.py
app/routes/: health.py  sms.py
app/services/: auth.py  sms.py
